MarcoKitTests/TestData/error/object12.marco
--before
{
    "bar"{ index 1 }
}

--after
11-22: Whitespace required in a key-value pair
